2010-02-28  Squizzle  <>

	* Demo\IDemo.cs:
	* Demo\NetworkDemo.cs:
	* Demo\FriendStatusDemo.cs:
	* FurcadiaFramework_Example.csproj: 
