@@ -28,8 +28,6 @@ namespace FurcadiaFramework_Example
                 ((IDemo)queue.Dequeue()).Run();
                 queue.TrimToSize();
             }
-            
-            Console.ReadKey();
 			return 0;
         }
     }
